--- a/docs/.vitepress/theme/styles/index.css
+++ b/docs/.vitepress/theme/styles/index.css
@@ -1,9 +1,13 @@
 :root {
-    /* 标题 */
-    --vp-home-hero-name-color: transparent;
-    --vp-home-hero-name-background: linear-gradient(135deg, #6ee7b7 20%, #D939CD 100%);
+  /* 标题 */
+  --vp-home-hero-name-color: rgba(0, 0, 0, 0.2);
+  --vp-home-hero-name-background: linear-gradient(
+    135deg,
+    #6ee7b7 0%,
+    #d939cd 100%
+  );
 
-    /* 图标背景 */
-    --vp-home-hero-image-background-image: linear-gradient(135deg, #F6CEEC 10%, #D939CD 100%);
-    --vp-home-hero-image-filter: blur(150px);
+  /* 图标背景 */
+  /* --vp-home-hero-image-background-image: linear-gradient(135deg, #F6CEEC 10%, #D939CD 100%); */
+  --vp-home-hero-image-filter: blur(0);
 }
