--- a/docs/.vitepress/theme/styles/index.css
+++ b/docs/.vitepress/theme/styles/index.css
@@ -9,5 +9,8 @@
 
   /* 图标背景 */
   /* --vp-home-hero-image-background-image: linear-gradient(135deg, #F6CEEC 10%, #D939CD 100%); */
-  --vp-home-hero-image-filter: blur(0);
+  --vp-home-hero-image-filter: blur(10);
+
+  --vp-home-hero-image-width: 100%;
+  --vp-home-hero-image-height: 100%;
 }
